--- a/index.html
+++ b/index.html
@@ -1,36 +1,132 @@
-<!DOCTYPE html>
-<html>
+<!Doctype html>
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>Dzénetan Massart-Acceuil</title>
-
-	<link rel="icon" href="favicon.ico" type="image/png" />
-
-	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+    <meta charset="UTF-8" />
+    <title>Dzénetan Massart-Le site</title>
+    <script src="assets/bootstrap/js/jquery.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-	<main>
-		<div class="intro">Bienvenue sur le site de <br> Dzénetan Massart</div>
-		<div class="tagline">Des petites applications | Des tutos | Des photographies | Des histoires</div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
-			<a target="_blank" href="https://github.com/DzenetanMassart"><i class="fab fa-github"></i><a>
-    </div>
-	</main>
+    <header class="container">
+        <div class="row">
+            <div class="col-xs-2 col-sm-1">
+                <img src="assets/image/profil.png" id="profil" />
+            </div>
+            <div class="col-xs-5 col-sm-4" id="dzem">
+                <p>Dzénetan </p>
+                <h1>MASSART</h1>
+            </div>
+            <div class="col-xs-5 col-sm-7" id="civique">
+                <p>Né à Namur le 5 juillet 1996,</p>
+                <p>Célibataire,</p>
+            </div>
+        </div>
+    </header>
+    <section id="grid">
+        <div>
+            <article>
+                <h2>Δ Logiciels utilisés</h2>
+                <h3>▼ Traitement/création d’image</h3>
+                <ul>
+                    <li class="trois_quatre">Adobe Photoshop</li>
+
+                    <li class="trois_quatre">Adobe Illustrator</li>
+
+                    <li class="quatre_quatre"> PaintDotNet</li>
+                </ul>
+            </article>
+            <article>
+                <h3>▼ 3D</h3>
+                <ul>
+                    <li class="un_quatre">Autodesk Maya</li>
+
+                    <li class="deux_quatre">Autodesk 3D Studio Max</li>
+
+                    <li class="deux_quatre">Google SketchUp</li>
+                </ul>
+            </article>
+            <article>
+                <h3>▼ Mise en page</h3>
+                <ul>
+                    <li class="trois_quatre">Adobe InDesign</li>
+
+                    <li class="quatre_quatre">Microsoft Word</li>
+                </ul>
+            </article>
+            <article>
+                <h3>▼ Video</h3>
+                <ul>
+                    <li class="trois_quatre">Adobe Premiere</li>
+                    <li class="deux_quatre">Adobe After Effect</li>
+                    <li class="quatre_quatre">Windows Movie Maker</li>
+                    <li class="deux_quatre">Corel MotionStudio 3D</li>
+                    <li class="quatre_quatre">Magix Video Deluxe</li>
+                </ul>
+            </article>
+            <article>
+                <h3>▼ Audio</h3>
+                <ul>
+                    <li class="un_quatre">Audacity</li>
+                </ul>
+            </article>
+            <article>
+                <h3>▼ WEB</h3>
+                <ul>
+                    <li class="trois_quatre">CSS (Notepad++,Bracket et Visual Studio Code)</li>
+                    <li class="deux_quatre">SCSS (Visual Studio Code)</li>
+                    <li class="trois_quatre">HTML (Notepad++,Bracket et Visual Studio Code)</li>
+                    <li class="deux_quatre">JS (Notepad++,Bracket et Visual Studio Code)</li>
+                </ul>
+            </article>
+        </div>
+
+
+
+        <div>
+            <article>
+                <h2>Δ Formations</h2>
+                <ul>
+                    <li>Obtention du CESS en 2016 au Collège Pie 10 après un enseignement général.</li>
+
+                    <li>2 ans à la première année de la Haute École Albert Jacquard en Infographie à Namur.</li>
+                </ul>
+
+            </article>
+
+            <article>
+                <h2>Δ Langues maîtrisées</h2>
+                <ul>
+                    <li>Français (langue maternelle)</li>
+
+                    <li>Anglais (niveau technique, spécialisé «infographie»)</li>
+                </ul>
+            </article>
+
+            <article>
+                <h2>Δ Hobbies</h2>
+                <ul>
+                    <li>Production de ressources variées sans consignes particulières</li>
+
+                    <li>Production d’image humoristiques</li>
+                    <li>Production de modèle 3D pour créer des histoires ou des fan-arts,</li>
+                    <li>Écriture d’histoires satiriques.</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Δ Réseau en ligne</h2>
+                <ul>
+                    <li>Github:
+                        <a class="tiny_linky" href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a>
+                    </li>
+                    <li>Linkedin:
+                        <a class="tiny_linky" href="https://www.linkedin.com/in/dzenetan-massart-05071996/">https://www.linkedin.com/in/dzenetan-massart-05071996/</a>
+                    </li>
+                </ul>
+            </article>
+        </div>
+    </section>
+
 </body>
-</html>
