Mise  à jour responsive BETA

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Dzénetan Massart-Le site</title>
-    <script src="assets/bootstrap/js/jquery.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -16,8 +17,8 @@
                 <img src="assets/image/profil.png" id="profil" />
             </div>
             <div class="col-xs-5 col-sm-4" id="dzem">
-                <p>Dzénetan </p>
-                <h1>MASSART</h1>
+                <p class="prenom">Dzénetan </p>
+                <h1 class="nom">MASSART</h1>
             </div>
             <div class="col-xs-5 col-sm-7" id="civique">
                 <p>Né à Namur le 5 juillet 1996,</p>
