Ajout du lien de profil Linkedin

--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -132,6 +132,7 @@
                         <a class="tiny_linky" href="https://www.linkedin.com/in/dzenetan-massart-05071996/">https://www.linkedin.com/in/dzenetan-massart-05071996/</a>
                     </li>
                 </ul>
+                <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
             </article>
         </div>
     </section>
