--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -132,7 +132,9 @@
                         <a class="tiny_linky" href="https://www.linkedin.com/in/dzenetan-massart-05071996/">https://www.linkedin.com/in/dzenetan-massart-05071996/</a>
                     </li>
                 </ul>
+
                 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="dark" data-vanity="dzenetan-massart-05071996"><a class="LI-simple-link" href="https://be.linkedin.com/in/dzenetan-massart-05071996?trk=profile-badge">Dzénetan Massart</a></div>
             </article>
         </div>
     </section>
