Mise à jour du CV (optimisation)

--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -12,21 +12,23 @@
 </head>
 
 <body>
-    <header class="container">
-        <div class="row">
-            <div class="col-xs-2 col-sm-1">
-                <img src="../image/profil.jpeg" id="profil" />
-            </div>
-            <div class="col-xs-5 col-sm-4" id="dzem">
-                <p class="prenom">Dzénetan </p>
-                <h1 class="nom">MASSART</h1>
-            </div>
-            <div class="col-xs-5 col-sm-7" id="civique">
-                <p>Né à Namur le 5 juillet 1996,</p>
-                <p>Célibataire,</p>
-            </div>
+
+    <header>
+
+        <img src="../image/profil.jpeg" id="profil" />
+
+        <div id="dzem">
+            <p>Dzénetan </p>
+            <h1>MASSART</h1>
         </div>
+
+        <div id="civique">
+            <p>Né à Namur le 5 juillet 1996,</p>
+            <p>Célibataire,</p>
+        </div>
+
     </header>
+
     <section id="grid">
         <a class="menu" href="../../index.html">
             <div>
@@ -35,7 +37,24 @@
         </a>
         <div>
             <article>
-                <h2>Δ Logiciels utilisés</h2>
+                <h2>Δ Compétences</h2>
+
+                <h3>▼ WEB (Visual Studio Code)</h3>
+                <ul>
+                    <li class="trois_quatre">Git</li>
+                    <li class="trois_quatre">CSS</li>
+                    <li class="deux_quatre">SCSS</li>
+                    <li class="trois_quatre">HTML</li>
+                    <li class="deux_quatre">JS</li>
+                    <li class="trois_quatre">Bootstrap</li>
+                    <li class="trois_quatre">PHP</li>
+                    <li class="deux_quatre">React</li>
+
+
+                </ul>
+            </article>
+            <article>
+
                 <h3>▼ Traitement/création d’image</h3>
                 <ul>
                     <li class="trois_quatre">Adobe Photoshop</li>
@@ -59,8 +78,6 @@
                 <h3>▼ Mise en page</h3>
                 <ul>
                     <li class="trois_quatre">Adobe InDesign</li>
-
-                    <li class="quatre_quatre">Microsoft Word</li>
                 </ul>
             </article>
             <article>
@@ -70,22 +87,6 @@
                     <li class="deux_quatre">Adobe After Effect</li>
                     <li class="quatre_quatre">Windows Movie Maker</li>
                     <li class="deux_quatre">Corel MotionStudio 3D</li>
-                    <li class="quatre_quatre">Magix Video Deluxe</li>
-                </ul>
-            </article>
-            <article>
-                <h3>▼ Audio</h3>
-                <ul>
-                    <li class="un_quatre">Audacity</li>
-                </ul>
-            </article>
-            <article>
-                <h3>▼ WEB</h3>
-                <ul>
-                    <li class="trois_quatre">CSS (Notepad++,Bracket et Visual Studio Code)</li>
-                    <li class="deux_quatre">SCSS (Visual Studio Code)</li>
-                    <li class="trois_quatre">HTML (Notepad++,Bracket et Visual Studio Code)</li>
-                    <li class="deux_quatre">JS (Notepad++,Bracket et Visual Studio Code)</li>
                 </ul>
             </article>
         </div>
@@ -96,9 +97,12 @@
             <article>
                 <h2>Δ Formations</h2>
                 <ul>
-                    <li>Obtention du CESS en 2016 au Collège Pie 10 après un enseignement général.</li>
+                    <li>Formation BeCode en 2019 à Charleroi.</li>
 
                     <li>2 ans à la première année de la Haute École Albert Jacquard en Infographie à Namur.</li>
+
+                    <li>Obtention du CESS en 2016 au Collège Pie 10 après un enseignement général.</li>
+
                 </ul>
 
             </article>
@@ -115,11 +119,8 @@
             <article>
                 <h2>Δ Hobbies</h2>
                 <ul>
-                    <li>Production de ressources variées sans consignes particulières</li>
-
-                    <li>Production d’image humoristiques</li>
-                    <li>Production de modèle 3D pour créer des histoires ou des fan-arts,</li>
-                    <li>Écriture d’histoires satiriques.</li>
+                    <li>Production de ressources variées en 2D,3D,Coding et audio !</li>
+                    <li>Intéressé par les petits jeux Flash,HTML et WebGL !</li>
                 </ul>
             </article>
             <article>
