Ajout de WordPress dans les compétences WEB !

--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -49,7 +49,7 @@
                     <li class="trois_quatre">Bootstrap</li>
                     <li class="trois_quatre">PHP</li>
                     <li class="deux_quatre">React</li>
-
+                    <li class="deux_quatre">WordPress</li>
 
                 </ul>
             </article>
@@ -58,35 +58,35 @@
                 <h3>▼ Traitement/création d’image</h3>
                 <ul>
                     <li class="trois_quatre">Adobe Photoshop</li>
-
                     <li class="trois_quatre">Adobe Illustrator</li>
+                    <li class="quatre_quatre">PaintDotNet</li>
 
-                    <li class="quatre_quatre"> PaintDotNet</li>
                 </ul>
             </article>
             <article>
                 <h3>▼ 3D</h3>
                 <ul>
                     <li class="un_quatre">Autodesk Maya</li>
-
                     <li class="deux_quatre">Autodesk 3D Studio Max</li>
-
                     <li class="deux_quatre">Google SketchUp</li>
+
                 </ul>
             </article>
             <article>
                 <h3>▼ Mise en page</h3>
                 <ul>
                     <li class="trois_quatre">Adobe InDesign</li>
+
                 </ul>
             </article>
             <article>
                 <h3>▼ Video</h3>
                 <ul>
+                    <li class="quatre_quatre">Windows Movie Maker</li>
                     <li class="trois_quatre">Adobe Premiere</li>
                     <li class="deux_quatre">Adobe After Effect</li>
-                    <li class="quatre_quatre">Windows Movie Maker</li>
                     <li class="deux_quatre">Corel MotionStudio 3D</li>
+
                 </ul>
             </article>
         </div>
