Amélioration de la qualité de navigation et de l'esthétique !

--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -15,21 +15,15 @@
 
     <header>
 
-        <img src="../image/profil.jpeg" id="profil" />
+        <img src="../image/profil.jpeg" class="profil" />
 
-        <div id="dzem">
-            <p>Dzénetan </p>
-            <h1>MASSART</h1>
-        </div>
 
-        <div id="civique">
-            <p>Né à Namur le 5 juillet 1996,</p>
-            <p>Célibataire,</p>
-        </div>
+        <p class="civique">Dzénetan MASSART,Né à Namur le 5 juillet 1996, Célibataire</p>
+
 
     </header>
 
-    <section id="grid">
+    <section class="grid">
         <a class="menu" href="../../index.html">
             <div>
                 Retour vers l'acceuil
@@ -37,7 +31,7 @@
         </a>
         <div>
             <article>
-                <h2>Δ Compétences</h2>
+                <h2> Compétences</h2>
 
                 <h3>▼ WEB (Visual Studio Code)</h3>
                 <ul>
@@ -95,20 +89,22 @@
 
         <div>
             <article>
-                <h2>Δ Formations</h2>
+                <h2> Formations</h2>
                 <ul>
-                    <li>Formation BeCode en 2019 à Charleroi.</li>
 
-                    <li>2 ans à la première année de la Haute École Albert Jacquard en Infographie à Namur.</li>
 
-                    <li>Obtention du CESS en 2016 au Collège Pie 10 après un enseignement général.</li>
+                    <li>2019 - Formation en développement Web-BeCode - Charleroi</li>
+
+                    <li>2017-2019 - Infographie - HEAJ - Namur</li>
+
+                    <li> 2012-2016 - Enseignement Général - CollègePieX - Châtelineau </li>
 
                 </ul>
 
             </article>
 
             <article>
-                <h2>Δ Langues maîtrisées</h2>
+                <h2> Langues maîtrisées</h2>
                 <ul>
                     <li>Français (langue maternelle)</li>
 
@@ -117,14 +113,14 @@
             </article>
 
             <article>
-                <h2>Δ Hobbies</h2>
+                <h2> Hobbies</h2>
                 <ul>
-                    <li>Production de ressources variées en 2D,3D,Coding et audio !</li>
-                    <li>Intéressé par les petits jeux Flash,HTML et WebGL !</li>
+                    <li>Production en 2D,3D,Coding et audio !</li>
+                    <li>Jeux Flash,HTML et WebGL !</li>
                 </ul>
             </article>
             <article>
-                <h2>Δ Réseau en ligne</h2>
+                <h2> Réseau en ligne</h2>
                 <ul>
                     <li>Github:
                         <a class="tiny_linky" href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a>
