--- a/assets/pages/Apps.html
+++ b/assets/pages/Apps.html
@@ -46,54 +46,8 @@
     <section>
         <h1>Les Applications</h1>
         <p class="description">Ici se trouve les applications que j'ai créé sur mon Github !</p>
-        <article class="card">
-            <h4 class="card-title">Parlote</h4>
-            <span class="badge badge-warning">Utilise le microphone</span>
-            <div class="card-body">
-                <p class="card-text">C'est une application pour faire parler un personnage avec notre microphone en live !</p>
-                <a href="https://dzenetanmassart.github.io/Parlote/" class="btn btn-primary">Lien</a>
-            </div>
-        </article>
-
-        <article class="card">
-            <h4 class="card-title">Tricks and Tips</h4>
-            <span class="badge badge-secondary">Compile des apps et de la doc'</span>
-            <div class="card-body">
-                <p class="card-text">C'est une application pour chercher des applications et de la documentation autour des sites parlant de CSS,Boostrap,HTML, Javascript,... </p>
-                <a href="https://dzenetanmassart.github.io/Tricks-and-Tips/" class="btn btn-primary">Lien</a>
-            </div>
-        </article>
-
-        <article class="card">
-            <h4 class="card-title">Navigateurs</h4>
-            <span class="badge badge-danger">Choix de navigateur</span>
-            <div class="card-body">
-                <p class="card-text">C'est une application pour effectuer des recherches avec choix du navigateur avec pour base un code trouvé sur un vieux site ! </p>
-                <a href="https://dzenetanmassart.github.io/Navigateurs/" class="btn btn-primary">Lien</a>
-            </div>
-        </article>
-
-        <article class="card">
-            <h4 class="card-title">Cookie Clicker JS</h4>
-            <span class="badge badge-dark">Collectez des cookies en JS !</span>
-            <div class="card-body">
-                <p class="card-text">C'est une application qui a été créé en guise d'épreuve sur nos capacités à créer des jeux en JS+CANVAS/HTML/CSS , la particularité de ma version est son rendu visuel ! </p>
-                <a href="https://dzenetanmassart.github.io/JS-Cookie-Clicker/" class="btn btn-primary">Lien</a>
-            </div>
-        </article>
-
-        <article class="card">
-            <h4 class="card-title">Le jeu du pendu</h4>
-            <span class="badge badge-info">Trouvez le mot !</span>
-            <div class="card-body">
-                <p class="card-text">C'est une application qui a été créé dans la même veine que Cookie Clicker JS ! Le but est de trouver le mot mystère... sauf que l'application n'a pas de fin car,même si le mot est trouvé, l'application ne désactive pas le bouton et n'offre
-                    pas un bon feedback pour féliciter le joueur ! </p>
-                <a href="https://dzenetanmassart.github.io/le_jeu_du_pendu/" class="btn btn-primary">Lien</a>
-            </div>
-        </article>
-
+        <div id="generate"></div>
     </section>
-
-
-
+    <script src="../js/apps.js"></script>
+    <script src="../js/generate_apps.js"></script>
 </body>
