Amélioration de l'esthétique et ajout des langages que j'emplois !

--- a/index.html
+++ b/index.html
@@ -46,26 +46,48 @@
     <section>
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <p class="intro">Ce site a été créé pendant la formation "BeCode" et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart !</p>
+        <div class="inline">
+            <ul class="logiciels">
+                <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
 
-        <ul class="logiciels">
-            <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
+                <li>
+                    <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
+                </li>
+                <li>
+                    <a href="https://getbootstrap.com/docs/4.3/getting-started/download/">Bootstrap</a>
+                </li>
+                <li>
+                    <a href="https://fontawesome.com/start">FontAwesome</a>
+                </li>
+                <li>
+                    <a href="https://www.photopea.com/">Photopea</a>
+                </li>
+                <li>
+                    <a href="https://fonts.google.com/">Google Font</a>
+                </li>
+            </ul>
 
-            <li>
-                <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
-            </li>
-            <li>
-                <a href="https://getbootstrap.com/docs/4.3/getting-started/download/">Bootstrap</a>
-            </li>
-            <li>
-                <a href="https://fontawesome.com/start">FontAwesome</a>
-            </li>
-            <li>
-                <a href="https://www.photopea.com/">Photopea</a>
-            </li>
-            <li>
-                <a href="https://fonts.google.com/">Google Font</a>
-            </li>
-        </ul>
+
+            <ul class="technologies">
+                <span>Liste des langages que j'emplois pour créer ce site:</span>
+
+                <li>
+                    Git
+                </li>
+                <li>
+                    HTML
+                </li>
+                <li>
+                    CSS
+                </li>
+                <li>
+                    SCSS
+                </li>
+                <li>
+                    JS
+                </li>
+            </ul>
+        </div>
     </section>
 
 </body>
