--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="https://github.com/DzenetanMassart?tab=repositories">Github</a>
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart-05071996/">Linkedin</a>
+                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                         </div>
                     </li>
                 </ul>
