Correction du responsive et fusion de l'index avec la page des applications !

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="assets/pages/CVDM.html">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="assets/pages/Apps.html">Applications</a>
+                        <a class="nav-link" href="#apps">Applications</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -90,5 +90,12 @@
             </ul>
         </div>
     </section>
+    <section class="apps">
+        <h2 id="apps">Les Applications</h2>
+        <p class="description">Ici se trouve les applications que Dzénetan Massart a créé sur son Github !</p>
+        <div id="generate"></div>
+    </section>
+    <script src="assets/js/apps.js"></script>
+    <script src="assets/js/generate_apps.js"></script>
 
 </body>
