--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -35,15 +35,16 @@
 
                 <h3>▼ WEB (Visual Studio Code)</h3>
                 <ul>
+                    <li class="3_quatre">WordPress</li>
                     <li class="trois_quatre">Git</li>
                     <li class="trois_quatre">CSS</li>
-                    <li class="deux_quatre">SCSS</li>
-                    <li class="trois_quatre">HTML</li>
-                    <li class="deux_quatre">JS</li>
+                    <li class="trois_quatre">SCSS</li>
+                    <li class="quatre_quatre">HTML</li>
+                    <li class="trois_quatre">JS</li>
                     <li class="trois_quatre">Bootstrap</li>
-                    <li class="trois_quatre">PHP</li>
+                    <li class="deux_quatre">PHP</li>
                     <li class="deux_quatre">React</li>
-                    <li class="deux_quatre">WordPress</li>
+                   
 
                 </ul>
             </article>
@@ -60,9 +61,9 @@
             <article>
                 <h3>▼ 3D</h3>
                 <ul>
-                    <li class="un_quatre">Autodesk Maya</li>
+                    <li class="deux_quatre">Autodesk Maya</li>
                     <li class="deux_quatre">Autodesk 3D Studio Max</li>
-                    <li class="deux_quatre">Google SketchUp</li>
+           
 
                 </ul>
             </article>
@@ -76,10 +77,8 @@
             <article>
                 <h3>▼ Video</h3>
                 <ul>
-                    <li class="quatre_quatre">Windows Movie Maker</li>
-                    <li class="trois_quatre">Adobe Premiere</li>
+                    <li class="quatre_quatre">Adobe Premiere</li>
                     <li class="deux_quatre">Adobe After Effect</li>
-                    <li class="deux_quatre">Corel MotionStudio 3D</li>
 
                 </ul>
             </article>
@@ -115,7 +114,7 @@
             <article>
                 <h2> Hobbies</h2>
                 <ul>
-                    <li>Production en 2D,3D,Coding et audio !</li>
+                    <li>Production d'image, de vidéo et de page web !</li>
                 </ul>
             </article>
             <article>
