--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -35,7 +35,7 @@
 
                 <h3>▼ WEB (Visual Studio Code)</h3>
                 <ul>
-                    <li class="3_quatre">WordPress</li>
+                    <li class="trois_quatre">WordPress</li>
                     <li class="trois_quatre">Git</li>
                     <li class="trois_quatre">CSS</li>
                     <li class="trois_quatre">SCSS</li>
