--- a/assets/pages/CVDM.html
+++ b/assets/pages/CVDM.html
@@ -12,126 +12,90 @@
 </head>
 
 <body>
-
     <header>
-
-        <img src="../image/profil.jpeg" class="profil" />
-
-
-        <p class="civique">Dzénetan MASSART,Né à Namur le 5 juillet 1996, Célibataire</p>
-
-
+        <div> <img src="../image/profil.jpeg" class="profil" />
+        </div>
+        <div>
+            <h1>MASSART DZÉNETAN</h1>
+            <p class="type">Infographiste</p>
+        </div>
     </header>
+    <main>
+        <section class="gauche">
 
-    <section class="grid">
-        <a class="menu" href="../../index.html">
-            <div>
-                Retour vers l'acceuil
-            </div>
-        </a>
-        <div>
-            <article>
-                <h2> Compétences</h2>
 
-                <h3>▼ WEB (Visual Studio Code)</h3>
-                <ul>
-                    <li class="trois_quatre">WordPress</li>
-                    <li class="trois_quatre">Git</li>
-                    <li class="trois_quatre">CSS</li>
-                    <li class="trois_quatre">SCSS</li>
-                    <li class="quatre_quatre">HTML</li>
-                    <li class="trois_quatre">JS</li>
-                    <li class="trois_quatre">Bootstrap</li>
-                    <li class="deux_quatre">PHP</li>
-                    <li class="deux_quatre">React</li>
-                   
+            <h2>COORDONNÉES</h2>
+            <p>Né à Namur le 5 juillet 1996, Célibataire,</p>
+            <p>dzenetan.massart@gmail.com</p>
 
-                </ul>
-            </article>
-            <article>
+            <h2>RÉSEAUX</h2>
+            <p><a href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a></p>
+            <p><a href="www.linkedin.com/in/dzenetan-massart">www.linkedin.com/in/dzenetan-massart</a></p>
 
-                <h3>▼ Traitement/création d’image</h3>
-                <ul>
-                    <li class="trois_quatre">Adobe Photoshop</li>
-                    <li class="trois_quatre">Adobe Illustrator</li>
-                    <li class="quatre_quatre">PaintDotNet</li>
+            <h2>LANGUES MAÎTRISÉES</h2>
+            <p>Français (Langue maternelle)</p>
+            <p>Anglais (Niveau technique, spécialisé "infographie")</p>
+        </section>
 
-                </ul>
-            </article>
-            <article>
-                <h3>▼ 3D</h3>
-                <ul>
-                    <li class="deux_quatre">Autodesk Maya</li>
-                    <li class="deux_quatre">Autodesk 3D Studio Max</li>
-           
-
-                </ul>
-            </article>
-            <article>
-                <h3>▼ Mise en page</h3>
-                <ul>
-                    <li class="trois_quatre">Adobe InDesign</li>
-
-                </ul>
-            </article>
-            <article>
-                <h3>▼ Video</h3>
-                <ul>
-                    <li class="quatre_quatre">Adobe Premiere</li>
-                    <li class="deux_quatre">Adobe After Effect</li>
-
-                </ul>
-            </article>
-        </div>
+        <section class="droit">
 
 
 
-        <div>
-            <article>
-                <h2> Formations</h2>
-                <ul>
+            <h2>COMPÉTENCES</h2>
+            <h3>Coding ( Visual Studio Code )</h3>
+            <ul>
+                <li>CSS</li>
+                <li>SCSS</li>
+                <li>HTML5</li>
+                <li>Javascript</li>
+                <li>WordPress</li>
+                <li>Bootstrap</li>
+                <li>PHP</li>
+                <li>GIT</li>
+            </ul>
+            <h3>Gestion d'image</h3>
+            <ul>
+                <li>Adobe Photoshop</li>
+                <li>PaintDotNet</li>
+                <li>Adobe Illustrator</li>
+            </ul>
+            <h3>3D</h3>
+            <ul>
+                <li>Autodesk 3DSmax</li>
+                <li>Autodesk Maya</li>
+            </ul>
+            <h3>Mise en page</h3>
+            <ul>
+                <li>Adobe InDesign</li>
+            </ul>
+            <h3>Video</h3>
+            <ul>
+                <li>Adobe Premiere</li>
+                <li>Adobe AfterEffect</li>
+                <li>Magix Video Deluxe</li>
+            </ul>
+            <h2>Formations</h2>
+            <ul>
+                <li> 2019- Formation en développement Web- BeCode- Charleroi
+                </li>
+                <li>2017-2019 -Infographie - HEAJ- Namur
+                </li>
+                <li>2012-2016- Enseignement Général - CollègePieX - Châtelineau
+                </li>
+            </ul>
+            <h2>Stages</h2>
+            <ul>
+                <li> 2019-WordPress Charleroi-Entreprendre
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <div class="retour"><a href="../../index.html">Retourner à la page d'acceuil</a></div>
 
 
-                    <li>2019 - Formation en développement Web-BeCode - Charleroi</li>
 
-                    <li>2017-2019 - Infographie - HEAJ - Namur</li>
 
-                    <li> 2012-2016 - Enseignement Général - CollègePieX - Châtelineau </li>
 
-                </ul>
-
-            </article>
-
-            <article>
-                <h2> Langues maîtrisées</h2>
-                <ul>
-                    <li>Français (langue maternelle)</li>
-
-                    <li>Anglais (niveau technique, spécialisé «infographie»)</li>
-                </ul>
-            </article>
-
-            <article>
-                <h2> Hobbies</h2>
-                <ul>
-                    <li>Production d'image, de vidéo et de page web !</li>
-                </ul>
-            </article>
-            <article>
-                <h2> Réseau en ligne</h2>
-                <ul>
-                    <li>Github:
-                        <a class="tiny_linky" href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a>
-                    </li>
-                    <li>Linkedin:
-                        <a class="tiny_linky" href="https://www.linkedin.com/in/dzenetan-massart-05071996/">https://www.linkedin.com/in/dzenetan-massart-05071996/</a>
-                    </li>
-                </ul>
-
-                <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="dark" data-vanity="dzenetan-massart-05071996"><a class="LI-simple-link" href="https://be.linkedin.com/in/dzenetan-massart-05071996?trk=profile-badge">Dzénetan Massart</a></div>
-            </article>
-        </div>
-    </section>
 
 </body>
