Optimisation de la structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Dzénetan Massart-Le site</title>
+    <meta name="description" content="Le site web de Dzénetan Massart" />
+    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications" />
+    <meta name="author" content="Dzénetan Massart" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -17,7 +20,7 @@
         <nav class="navbar navbar-expand-lg">
             <img src="assets/image/profil.jpeg" id="profil" />
 
-            <a class="cv" href="assets/pages/CVDM.html">CV</a>
+            <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-vector-square"></i>
