--- a/CV.html
+++ b/CV.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8" />
     <title>Dzénetan Massart-Le CV</title>
+    <meta name="description" content="Le CV de Dzénetan Massart" />
+    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications" />
+    <meta name="author" content="Dzénetan Massart" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/cv.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/cv.css">
 </head>
 
 <body>
     <header>
-        <div> <img src="../image/profil.jpeg" class="profil" />
+        <div> <img src="assets/image/profil.jpeg" class="profil" />
         </div>
         <div>
             <h1>MASSART DZÉNETAN</h1>
@@ -91,7 +94,7 @@
         </section>
     </main>
 
-    <div class="retour"><a href="../../index.html">Retourner à la page d'acceuil</a></div>
+    <div class="retour"><a href="index.html">Retourner à la page d'acceuil</a></div>
 
 
 
